<resources>
    <string name="app_name">Interfaz de aerolínea</string>
    <string name="nombre">Nombre</string>
    <string name="direccion">Dirección</string>
    <string name="origen">Origen</string>
    <string name="apellidos">Apellidos</string>
    <string name="datosPersonales">Introduce tus datos personales:</string>
    <string name="e_mail">E-mail</string>
    <string name="destino">Destino</string>
    <string name="telefono">Teléfono</string>
    <string name="movilidad_reducida">Movilidad reducida</string>
    <string name="ubicacion">TODO</string>
    <string name="linea1">TODO</string>
    <string name="seguridad"> Nuestras normas de seguridad son salud, Conducta ética y Evaluación de las personas. ¿Desea seguro adicional?</string>
    <string name="si_deseo_seguro_adicional">Si, deseo seguro adicional</string>
    <string name="comidas">Comidas:</string>
    <string name="cena">Cena</string>
    <string name="almuerzo">Almuerzo</string>
    <string name="mascotas">Mascotas</string>
    <string name="desayuno">Desayuno</string>
    <string name="asiento_en_ventanilla">Asiento en ventanilla</string>
    <string name="primera_clase">Primera clase</string>
    <string name="extras_para_contratar">Extras para contratar:</string>
    <string name="no_estoy_satisfecho">No, no deseo el seguro</string>
    <string name="acepto_los_t_rminos_y_condiciones">Acepto los términos y Condiciones</string>
    <string name="precio_total_3">Precio total: 3$</string>
    <string name="ap" />
    <string name="finalizar_compra">FINALIZAR COMPRA</string>
    <string name="con_el_acceso_preferente_se_le_aplicar_n_50_000_adicionales">(Con el acceso preferente se le aplicarán 50.000$ adicionales)</string>
    <string name="mi_cuenta">Mi cuenta</string>
    <string name="datos_personales">Datos personales</string>
    <string name="mis_documentos_de_viaje">Mis documentos de viaje</string>
    <string name="mis_viajes">Mis viajes</string>
    <string name="tarjetas_de_embarque">Tarjetas de embarque</string>
    <string name="informaci_n_sobre_el_vuelo">Información sobre el vuelo</string>
    <string name="info_actualizada">Info actualizada</string>
    <string name="vales_de_regalo">Vales de regalo</string>
    <string name="revista_de_vuelo">Revista de vuelo</string>
    <string name="t_rminos_y_condiciones">Términos y condiciones</string>
    <string name="centro_de_ayuda">Centro de ayuda</string>
    <string name="contactar_con_la_aerol_nea">Contactar con la aerolínea</string>
    <string name="pol_tica_de_privacidad">Política de privacidad</string>
    <string name="configuraci_n_de_privacidad">Configuración de privacidad</string>
    <string name="mis_compa_eros_de_viaje">Mis compañeros de viaje</string>
    <string name="cuenta_de_facturaci_n">Cuenta de facturación</string>
    <string name="debes_aceptar_nuestra_pol_tica">Debes aceptar nuestra política</string>
    <string name="continuar_con_el_pago">CONTINUAR CON EL PAGO</string>
</resources>